@@ -18,10 +18,6 @@
 	<DOCKABLE NAME="view-markers" MOVABLE="TRUE">
 		new MarkerViewer(view);
 	</DOCKABLE>
-	<DOCKABLE NAME="io-progress-monitor" MOVABLE="TRUE">
-		new IOProgressMonitor();
-	</DOCKABLE>
-
 	<DOCKABLE NAME="task-monitor" MOVABLE="TRUE">
 		new TaskMonitor();
 	</DOCKABLE>
